CHANGELOG
#########

v0.5.0 (unreleased)
======

 - feat: scroll
 - feat: repaint screen on resize
 - fix: use relative path to 'which' (#7)

v0.4.1 (2015-05-14)
======

 - feat: Python 3 support (@NicolasLM)
 - feat: fold/unfold cgroup tree
 - feat: hint/error message when no cgroup is found and boot2docker is installed
 - fix \#3: crash when no cgroup is located
 - fix: docker detection + actions under systemd

v0.4.0 (2015-04-19)
======

 - feat: detect container system type (docker, systemd, lxc)
 - feat: attach, enter, stop, kill supported containers
 - feat: select container / follow container
 - fix: mutiple crashes related to small screens
 - fix: tree render
 - enhancement: rewrite README
 - enhancement: drop 'docopt' dependency

v0.3.1
======

 - enhancement: drop 'psutil' dependency
 - enhancement: python 2.6 compatibility
 - fix: phantom container lines after cgroup termination
 - doc: add screenshot

v0.3.0
======

 - add command line
 - add choose columns, sort columns from command line
 - add choose refresh rate from command line
 - add tree view + toggle from cmdline + toggle from keyboard
 - add pause mode to ease text selections
 - add status bar
 - add CHANGELOG
 - fix parse of 1-line dict-like cgroup pseudo-files
 - drop peak memory usage column, meaningless in practise

v0.2.0
======

 - add blkio bw column
 - add time column
 - enhancement: header contrast
 - enhancement: remove 1st header line
 - enhancement: header contrast
 - add sort toggle on click
 - highlight sort column
 - exit with 'q'

v0.1.0
======

Initial release
