@@ -7,6 +7,7 @@ v0.5.0 (unreleased)
  - feat: scroll
  - feat: repaint screen on resize
  - fix: use relative path to 'which' (#7)
+ - fix: crash when task is not present in cpuacct controller (#9)
 
 v0.4.1 (2015-05-14)
 ======
